main/tk: make the -dev subpkg depend on tk=$pkgver-r$pkgrel

--- a/main/tk/APKBUILD
+++ b/main/tk/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Isaac Dunham <ibid.ag@gmail.com>
 pkgname=tk
 pkgver=8.6.10
-pkgrel=0
+pkgrel=1
 pkgdesc="GUI toolkit for the Tcl scripting language"
 url="http://tcl.sourceforge.net/"
 arch="all"
@@ -49,6 +49,10 @@ package() {
 }
 
 dev() {
+	# libtk8.6.so is the only library made and it remains in the mainpackage
+	# so depending on the main package automatically is never done
+	# https://gitlab.alpinelinux.org/alpine/aports/issues/11232#note_68789
+	depends_dev="$depends_dev tk=$pkgver-r$pkgrel"
 	default_dev
 	cd $pkgdir
 	for i in $(find . -name '*.c' -o -name '*Config.sh'); do
