--- a/main/nfdump/APKBUILD
+++ b/main/nfdump/APKBUILD
@@ -18,7 +18,7 @@ source="$pkgname-$pkgver.tar.gz::https://github.com/phaag/nfdump/archive/v$pkgve
 	CVE-2019-14459.patch
 	"
 
-# secfixes
+# secfixes:
 #   1.6.17-r1:
 #     - CVE-2019-14459
 
