--- a/main/nfdump/APKBUILD
+++ b/main/nfdump/APKBUILD
@@ -22,7 +22,7 @@ source="$pkgname-$pkgver.tar.gz::https://github.com/phaag/nfdump/archive/v$pkgve
 	CVE-2019-14459.patch
 	"
 
-# secfixes
+# secfixes:
 #   1.6.15-r1:
 #     - CVE-2019-1010057
 #     - CVE-2019-14459
