--- a/main/lz4/APKBUILD
+++ b/main/lz4/APKBUILD
@@ -9,19 +9,17 @@ arch="all"
 license="BSD-2-Clause GPL-2.0-only"
 checkdepends="diffutils"
 subpackages="$pkgname-static $pkgname-dev $pkgname-doc $pkgname-libs $pkgname-tests:tests"
-source="$pkgname-$pkgver.tar.gz::https://github.com/$pkgname/$pkgname/archive/v$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://github.com/lz4/lz4/archive/v$pkgver.tar.gz"
 
-# secfixes
+# secfixes:
 #   1.9.2-r0:
 #     - CVE-2019-17543
 
 build() {
-	cd "$builddir"
 	make PREFIX="/usr"
 }
 
 check() {
-	cd "$builddir"
 	make check
 }
 
@@ -33,7 +31,6 @@ tests() {
 }
 
 package() {
-	cd "$builddir"
 	make PREFIX="/usr" DESTDIR="$pkgdir" install
 }
 
