community/xbps: fix secfixes

--- a/community/xbps/APKBUILD
+++ b/community/xbps/APKBUILD
@@ -15,7 +15,7 @@ subpackages="$pkgname-dev $pkgname-doc
 options="!check"
 source="$pkgname-$pkgver.tar.gz::https://github.com/void-linux/xbps/archive/$pkgver.tar.gz"
 
-# secfixes
+# secfixes:
 #   0.58-r0:
 #     - CVE-2020-7450
 
