community/sox: fix secfixes

--- a/community/sox/APKBUILD
+++ b/community/sox/APKBUILD
@@ -14,7 +14,7 @@ makedepends="ffmpeg-dev libao-dev libvorbis-dev libogg-dev lame-dev
 	autoconf automake libtool
 	"
 subpackages="$pkgname-static $pkgname-doc $pkgname-dev"
-source="https://downloads.sourceforge.net/sourceforge/$pkgname/$pkgname-$pkgver.tar.gz
+source="https://downloads.sourceforge.net/sourceforge/sox/sox-$pkgver.tar.gz
 	CVE-2017-15371.patch::https://github.com/mansr/sox/commit/818bdd0.patch
 	CVE-2017-11358.patch::https://github.com/mansr/sox/commit/6cb44a4.patch
 	CVE-2017-15370.patch::https://github.com/mansr/sox/commit/ef3d8be.patch
@@ -34,7 +34,7 @@ source="https://downloads.sourceforge.net/sourceforge/$pkgname/$pkgname-$pkgver.
 	fix-musl.patch
 	"
 
-# secfixes
+# secfixes:
 #   14.4.2-r5:
 #     - CVE-2017-13571
 #     - CVE-2017-11358
