testing/rabbitmq-server: fix secfixes

--- a/testing/rabbitmq-server/APKBUILD
+++ b/testing/rabbitmq-server/APKBUILD
@@ -26,7 +26,7 @@ source="
 "
 options="!check" # test suite broken
 
-# secfixes
+# secfixes:
 #   3.7.17:
 #     - CVE-2015-9251
 #     - CVE-2017-16012
