testing/shadowsocks-libev: fix secfixes

--- a/testing/shadowsocks-libev/APKBUILD
+++ b/testing/shadowsocks-libev/APKBUILD
@@ -13,7 +13,7 @@ source="shadowsocks-libev-$pkgver.tar.gz::https://github.com/shadowsocks/shadows
 	use-upstream-libcorkipset-libbloom.patch
 	"
 
-# secfixes
+# secfixes:
 #   3.3.4-r0:
 #     - CVE-2019-5163
 #     - CVE-2019-5164
