--- a/testing/libxml++/APKBUILD
+++ b/testing/libxml++/APKBUILD
@@ -1,33 +1,28 @@
 # Contributor: Francesco Colista <fcolista@alpinelinux.org>
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=libxml++
-pkgver=3.0.1
-pkgrel=4
+pkgver=3.2.0
+pkgrel=0
 pkgdesc="libbxml++ is a C++ wrapper for the libxml XML parser library."
 url="http://libxmlplusplus.sourceforge.net/"
 arch="all"
-license="GPL-2.0"
+license="LGPL-2.1-or-later"
 makedepends="libxml2-dev glibmm-dev perl-dev"
 subpackages="$pkgname-dev $pkgname-doc"
-source="https://download.gnome.org/sources/$pkgname/${pkgver%.[0-9]*}/$pkgname-$pkgver.tar.xz"
-builddir="$srcdir/$pkgname-$pkgver"
+source="https://download.gnome.org/sources/libxml++/${pkgver%.[0-9]*}/libxml++-$pkgver.tar.xz"
 
 build() {
-	cd "$builddir"
 	./configure --prefix=/usr
 	make
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
-	install -Dm644 $pkgname-${pkgver%.[0-9]*}.pc \
-		"$pkgdir"/usr/lib/pkgconfig/${pkgname%.[0-9]*}.pc
+	ln -s libxml++-3.0.pc "$pkgdir"/usr/lib/pkgconfig/libxml++.pc
 }
 
 check() {
-	cd "$builddir"
 	make check
 }
 
-sha512sums="9b8ccea9df11d70bb23d7d9983b18d28c648aa0107f9654a79d1cfe97db4633b69dd4b97b76d155aca8553d014a314247851f18d0371717e44a056ee804ccd95  libxml++-3.0.1.tar.xz"
+sha512sums="003df3d3ab1955b6facc133c9322e4a2b3b8fe6e2a5309549cef1ce088b0fca0c6546a3a4deb33c61c2169797229ee1df9ef6e0233160ee5534cd39ba29afd64  libxml++-3.2.0.tar.xz"
