community/erlang: upgrade to 22.2.7

--- a/community/erlang/APKBUILD
+++ b/community/erlang/APKBUILD
@@ -3,8 +3,7 @@
 # Contributor: Marlus Saraiva <marlus.saraiva@gmail.com>
 # Maintainer: Daniel Isaksen <d@duniel.no>
 pkgname=erlang
-pkgver=22.1
-_srcver=$pkgver
+pkgver=22.2.7
 pkgrel=0
 pkgdesc="General-purpose programming language and runtime environment"
 url="https://www.erlang.org/"
@@ -51,11 +50,11 @@ subpackages="$pkgname-dev
 	$pkgname-tools:tools
 	$pkgname-wx:wx
 	$pkgname-xmerl:xmerl"
-source="https://github.com/erlang/otp/releases/download/OTP-22.1/OTP-$_srcver-bundle.tar.gz
+source="https://github.com/erlang/otp/archive/OTP-$pkgver.tar.gz
 	0005-Do-not-install-nteventlog-and-related-doc-files-on-n.patch
 	0010-fix-nteventlog-remove.patch"
 
-builddir="$srcdir/otp"
+builddir="$srcdir/otp-OTP-$pkgver"
 
 build() {
 	export CPPFLAGS="-D_BSD_SOURCE $CPPFLAGS"
@@ -171,6 +170,6 @@ dev() {
 	}
 
 
-sha512sums="e961422cb220f4e9b8e242337eb280d6a29e6c53963df59d6ae27ee6d8ac53b99c824bdf12b48a344b5dfe84adb54130a5639ae7eebe55c41020605543100b98  OTP-22.1-bundle.tar.gz
+sha512sums="1746acd526eda37c769b70bba1ad0f73ee1e658d05d0cbbe4063f34c11f8061932b2cde04df725537f5c5b81b537897ada2f0f9b6b18b7554b0f7596c492906b  OTP-22.2.7.tar.gz
 6a711e25b55816527c0a793e45dafb9a95b0a20fa537f8e03fb918e0137f1b1f60e414861a7005b8230a72e3e2f5e0caedb054a6c492b6f6f859ddbad47d2175  0005-Do-not-install-nteventlog-and-related-doc-files-on-n.patch
 dbbc05908cd4b1a3842ff32afcef8a0621b1ec532e83d70fed4ee9263b3f82afc0d173c7a7c776196c8f54c2ab2bca3c9ce35da676dedd5802dbc23111525577  0010-fix-nteventlog-remove.patch"
