community/tracker-miners: upgrade to 2.3.2

--- a/community/tracker-miners/APKBUILD
+++ b/community/tracker-miners/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Rasmus Thomsen <oss@cogitri.dev>
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=tracker-miners
-pkgver=2.3.1
-pkgrel=4
+pkgver=2.3.2
+pkgrel=0
 pkgdesc="Data miners for tracker"
 url="https://developer.gnome.org/libtracker-miner/stable"
 arch="all !s390x" # networkmanager not avail due to iwd
@@ -17,8 +17,7 @@ makedepends="meson glib-dev intltool tracker-dev ffmpeg-dev dbus-dev exempi-dev
 checkdepends="bash coreutils python3 py3-gobject3"
 options="!check" # Requires itself to be installed on the system
 subpackages="$pkgname-doc $pkgname-lang $pkgname-dbg"
-source="https://download.gnome.org/sources/tracker-miners/${pkgver%.*}/tracker-miners-$pkgver.tar.xz
-	fix-seccomp.patch"
+source="https://download.gnome.org/sources/tracker-miners/${pkgver%.*}/tracker-miners-$pkgver.tar.xz"
 
 build() {
 	meson \
@@ -42,5 +41,4 @@ package() {
 	DESTDIR="$pkgdir" ninja -C output install
 }
 
-sha512sums="ab5e42a759dda5f589efa258cfca7ba49703ca6fed4141c68f341d56ba887371c51fd8b9f22cf1b49425b10d26a9fe946fdcaa5b54e8771ff4a52abddf0c4b7b  tracker-miners-2.3.1.tar.xz
-268ae16aaa5685a0a80f0bc918b3ab052adcb38c055fe151603e8dd26ca72d61a67787d954d54c1efa76f5eb71827ad46c9e0c4ce0b405cdd3f2e1f2b5e11e05  fix-seccomp.patch"
+sha512sums="461e6a6213b35f15fec679580b0776b431dc40053f4b7e08061f9e25c2c806dea0cfd16fda93ffbd34577e3d7ac30459a6e2c3412db125720d232427928d1084  tracker-miners-2.3.2.tar.xz"
