--- a/community/texlive/APKBUILD
+++ b/community/texlive/APKBUILD
@@ -5,7 +5,7 @@ pkgver=20190410
 pkgrel=6
 pkgdesc="Comprehensive TeX document production system"
 url="http://tug.org/texlive/"
-arch="all !ppc64le"
+arch="all"
 license="GPL"
 depends="perl texmf-dist>=2018.50036"
 depends_dev=""
