--- a/testing/kcgi/APKBUILD
+++ b/testing/kcgi/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: David Demelier <markand@malikania.fr>
 # Maintainer: David Demelier <markand@malikania.fr>
-pkgname="kcgi"
-pkgver=0.10.12
+pkgname=kcgi
+pkgver=0.10.13
 _pkgver=${pkgver//./_}
 pkgrel=0
 pkgdesc="CGI and FastCGI library for C/C++ web applications"
@@ -27,4 +27,4 @@ package() {
 	bmake DESTDIR="$pkgdir" install
 }
 
-sha512sums="4da4948a4122883cd17bb71c78b169fe707f6ec40e4292c87d005deae860d4b57082b41cfccc66137812c55a8297e6375fb3d6e8b577ab3592b7d504dce2aed0  kcgi-0.10.12.tar.gz"
+sha512sums="514226891b6603bf55918e0bc2e91144a6d0bef4f41d6533414182711c847ae20c68ff38dc47ca99cdacc6bc634542de90c5cd6baaf381b4888f15c65f759ad7  kcgi-0.10.13.tar.gz"
