testing/nsnake: upgrade to 3.0.1

--- a/testing/nsnake/APKBUILD
+++ b/testing/nsnake/APKBUILD
@@ -1,22 +1,17 @@
 # Contributor: David Demelier <markand@malikania.fr>
 # Maintainer: David Demelier <markand@malikania.fr>
-pkgname="nsnake"
-pkgver="2.2.0"
+pkgname=nsnake
+pkgver=3.0.1
 pkgrel=0
 pkgdesc="snake game for your terminal"
-url="http://projects.malikania.fr/nsnake"
+options="!check suid" # suid is required for saving scores.
+url="https://github.com/alexdantas/nSnake"
 arch="all"
 license="ISC"
 makedepends="ncurses-dev"
 subpackages="$pkgname-doc"
-source="
-	http://releases.malikania.fr/nsnake/$pkgver/$pkgname-$pkgver.tar.xz
-	patch-ncurses.patch"
-options="!check suid" # suid is required for saving scores.
-
-prepare() {
-	default_prepare
-}
+source="$pkgname-$pkgver.tar.gz::https://github.com/alexdantas/nSnake/archive/v$pkgver.tar.gz"
+builddir="$srcdir/nSnake-$pkgver"
 
 build() {
 	make PREFIX=/usr VARDIR=/var
@@ -26,5 +21,4 @@ package() {
 	make PREFIX=/usr VARDIR=/var DESTDIR="$pkgdir" install
 }
 
-sha512sums="275fdabfe2a4fead664198c98f7d5425d6c60b2334497405dca0a3c3f77c2d0bb5ba8a8e404b61acb7e238de0cf900e5861fa3442cee89cf9c9591f05b5900bf  nsnake-2.2.0.tar.xz
-64a3973aa47917d48d67413a388b028431d63f20fe7c44b4e95a85a9d894917728f7efd88c5ddc3d9a84d3d839845a09f10ba1dd21bf17826d850ea1248b1915  patch-ncurses.patch"
+sha512sums="94930849ce0ff3137c2033f4148858d55dbfdeb66f42109669891462914e434eeb0a442bca9804d8760f63ccb490264263602af11749f489f99c3c1c69e68139  nsnake-3.0.1.tar.gz"
