--- a/community/tpm2-tss/APKBUILD
+++ b/community/tpm2-tss/APKBUILD
@@ -2,13 +2,14 @@
 # Contributor: Alexander Sack <asac@pantacor.com>
 # Maintainer: Alexander Sack <asac@pantacor.com>
 pkgname=tpm2-tss
-pkgver=2.3.2
-pkgrel=1
+pkgver=2.3.3
+pkgrel=0
 pkgdesc="TPM 2.0 TSS"
 url="https://github.com/tpm2-software/tpm2-tss/"
 arch="all"
 license="BSD-2-Clause"
-makedepends="automake autoconf openssl-dev doxygen perl linux-headers cmocka-dev"
+makedepends="automake autoconf libtool openssl-dev doxygen perl
+	linux-headers cmocka-dev autoconf-archive"
 subpackages="
 	$pkgname-doc
 	$pkgname-mu
@@ -21,8 +22,12 @@ subpackages="
 	$pkgname-static
 	$pkgname-dev
 	"
-source="https://github.com/tpm2-software/tpm2-tss/releases/download/$pkgver/tpm2-tss-$pkgver.tar.gz
-	"
+source="$pkgname-$pkgver.tar.gz::https://github.com/tpm2-software/tpm2-tss/archive/$pkgver.tar.gz"
+
+prepare() {
+	default_prepare
+	./bootstrap
+}
 
 build() {
 	./configure \
@@ -89,4 +94,4 @@ tctildr() {
 	mv "$pkgdir"/usr/lib/libtss2-tctildr.so* "$subpkgdir/usr/lib"
 }
 
-sha512sums="7b679b54f3478c3adee5b6c3135cbe491ffd9f4712991f465edbd6c7d2831e5f1537038ec36f288e9545c719d5d167b61116c924cf5d816220615d0b58a1d436  tpm2-tss-2.3.2.tar.gz"
+sha512sums="77fc384fb899d3c5646bde4cdcb59060c31ebeacd466e0e89901105fd0e873fb296d1d48e2f2dd214a25c1e204287738c747a8888ce0f11f759138c86e8dcda7  tpm2-tss-2.3.3.tar.gz"
