testing/moosefs: upgrade to 3.0.111

--- a/testing/moosefs/APKBUILD
+++ b/testing/moosefs/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Michael Pirogov <vbnet.ru@gmail.com>
 # Maintainer: Michael Pirogov <vbnet.ru@gmail.com>
 pkgname="moosefs"
-pkgver="3.0.110"
-pkgrel=1
+pkgver="3.0.111"
+pkgrel=0
 pkgdesc="Open Source, Petabyte, Fault-Tolerant, Highly Performing, Scalable Network Distributed File System"
 url="https://moosefs.com"
 arch="all"
@@ -22,8 +22,7 @@ source="$pkgname-$pkgver.tar.gz::http://ppa.moosefs.com/src/moosefs-$pkgver-1.ta
 	$pkgname-cgiserv.confd
 	$pkgname-master.initd
 	$pkgname-metalogger.initd
-	$pkgname-chunkserver.initd
-	$pkgname-cs-segfault.patch"
+	$pkgname-chunkserver.initd"
 
 prepare() {
 	default_prepare
@@ -152,10 +151,9 @@ cgiserv_openrc() {
 	install -Dm644 "$srcdir"/moosefs-cgiserv.confd "$subpkgdir"/etc/conf.d/moosefs-cgiserv
 }
 
-sha512sums="d431c5b9f3766fb911924015e076fd2ae8ece2f1cf3e063488dc82ccc3014baec3492a9dfe70ec8c150c94a52217318cfe716916465983523fff603d4f054b5c  moosefs-3.0.110.tar.gz
+sha512sums="800b87956a7aaed6903d854589eaf0d81f61ce385919f921ea831ae21bf075a6da80eb87a7673fa136d1cb4218d124a907f5619180736a7aa3edc8178288505f  moosefs-3.0.111.tar.gz
 c698aff4de9aeb76202a809e44ac8d0ec9c6348a806b1c813c2a40858339b1c139a480a9c5aff40bf2c9821883c6c0dfeabb010f3faa5746673235f0fb3c5a76  moosefs-cgiserv.initd
 b5c625f0004df33889de60ddad37e41f3acf081b37247606a1544e5f63354e121fe4cce511a6e60f4f2c0305155faf0614b8a4bce7267929fe68a1a4b546b582  moosefs-cgiserv.confd
 a041fa324d37bda098ad65e9d6507f281ed388471956ca79aa33b8b0d1c4a9d528662a2410c47f3856183d6378ac7fb417c3d7ec314f624e7e5dac7c5e4247f0  moosefs-master.initd
 8e73a7715e7a010d435efb9058ed67aad1caa95c840d3f1fae6bafd2a700cedbb0244d29363929d8e8d9a2036a2e0b173c0c2f7b52529ba4088e1296479fc0f5  moosefs-metalogger.initd
-56a714f3d29030ca12dc1859a1121b2a89606a2ccccec65481e2eb0b846757dea71dfe5f5a6d648b32e731d14b7d7725f79703851365b0862d7eb415a5f49dfb  moosefs-chunkserver.initd
-ce5a400b67e693358aac604698462dbb80783baffb76e2b08a1687ce2ae5bfe616fad11ea47d7daae2e9cef0d2851b0b4f1baa1db0c935c5e6567bf7345728ab  moosefs-cs-segfault.patch"
+56a714f3d29030ca12dc1859a1121b2a89606a2ccccec65481e2eb0b846757dea71dfe5f5a6d648b32e731d14b7d7725f79703851365b0862d7eb415a5f49dfb  moosefs-chunkserver.initd"
