--- a/main/rsyslog/APKBUILD
+++ b/main/rsyslog/APKBUILD
@@ -6,7 +6,7 @@
 # Maintainer: Cameron Banta <cbanta@gmail.com>
 pkgname=rsyslog
 pkgver=8.2001.0
-pkgrel=0
+pkgrel=1
 pkgdesc="Enhanced multi-threaded syslogd with database support and more."
 url="https://www.rsyslog.com/"
 arch="all !s390x" # limited by czmq
@@ -80,6 +80,7 @@ _plugins="
 	uxsock:omuxsock
 	zmq:imczmq:omczmq
 	imdocker
+	clickhouse:omclickhouse
 	"
 for _i in $_plugins; do
 	subpackages="$subpackages $pkgname-${_i%%:*}:_plugin"
@@ -108,6 +109,7 @@ build() {
 		--enable-snmp \
 		--enable-elasticsearch \
 		--enable-omhttp \
+		--enable-clickhouse \
 		--enable-gnutls \
 		--enable-mail \
 		--enable-imdiag \
