--- a/community/py3-prettytable/APKBUILD
+++ b/community/py3-prettytable/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=py3-prettytable
 _pkgname=prettytable
 pkgver=0.7.2
-pkgrel=4
+pkgrel=5
 pkgdesc="Python library for easily displaying tabular data"
 url="https://code.google.com/p/prettytable"
 arch="noarch"
@@ -26,6 +26,7 @@ check() {
 
 package() {
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
+	chmod a+rX "$pkgdir"/usr/lib/python3*/site-packages/*.egg-info/*
 }
 
 sha512sums="84611b9ad11bd428cdb00795e0a9baff44d027331b73ed1742596acda8acc8aca3df4276fa2f2ca2289f10b2989b3c86556de70bca6a9773b15cd80c54c33117  prettytable-0.7.2.tar.gz"
