--- a/testing/alsa-ucm-conf/APKBUILD
+++ b/testing/alsa-ucm-conf/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Minecrell <minecrell@minecrell.net>
 # Maintainer: Minecrell <minecrell@minecrell.net>
 pkgname=alsa-ucm-conf
-pkgver=1.2.1.2
+pkgver=1.2.2
 pkgrel=0
 pkgdesc="ALSA Use Case Manager configuration"
 url="https://www.alsa-project.org"
@@ -12,7 +12,7 @@ options="!check" # no tests
 
 package() {
 	mkdir -p "$pkgdir"/usr/share/alsa
-	cp -r "$srcdir"/ucm2 "$pkgdir"/usr/share/alsa
+	cp -r ucm2 "$pkgdir"/usr/share/alsa
 }
 
-sha512sums="e498c4355a765eb6ecd03f03611c8904f757bf73619a3c8159c044f80a4c3ab5cbd343692c227e13c6da307fc2e35259b4726902d3ab8e03eff11aa1c74027d5  alsa-ucm-conf-1.2.1.2.tar.bz2"
+sha512sums="25e3f341c110772c7cffc8c7745b320f2ddd12fe6460380c088939b5dc67b99ae4ad92e69375179574e0e1c40d14ff49961e86494e223fde009e51590f00ca8f  alsa-ucm-conf-1.2.2.tar.bz2"
