--- a/testing/alsa-topology-conf/APKBUILD
+++ b/testing/alsa-topology-conf/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Minecrell <minecrell@minecrell.net>
 # Maintainer: Minecrell <minecrell@minecrell.net>
 pkgname=alsa-topology-conf
-pkgver=1.2.1
+pkgver=1.2.2
 pkgrel=0
 pkgdesc="ALSA topology configuration files"
 url="https://www.alsa-project.org"
@@ -12,7 +12,7 @@ options="!check" # no tests
 
 package() {
 	mkdir -p "$pkgdir"/usr/share/alsa
-	cp -r "$srcdir"/topology "$pkgdir"/usr/share/alsa
+	cp -r topology "$pkgdir"/usr/share/alsa
 }
 
-sha512sums="3480e58f12aeca04b0c1821e074daeb369949acbcf7bc61b09895ee43de84cb716566518a56a4d681babbb3f13faace5a16fff079d8bdaefc7c27fc1382cd41a  alsa-topology-conf-1.2.1.tar.bz2"
+sha512sums="145ee0e16f7f84d5f97759b1efaa3df9fe35c8b33c7ae863ae1b915f361acd902ad05f59090e1d98b2a4f2ecc14933681592893564fcc45cdbc974899f789b94  alsa-topology-conf-1.2.2.tar.bz2"
