main/pkgconf: fix url=

--- a/main/pkgconf/APKBUILD
+++ b/main/pkgconf/APKBUILD
@@ -1,9 +1,9 @@
 # Maintainer: Drew DeVault <sir@cmpwn.com>
 pkgname=pkgconf
 pkgver=1.6.3
-pkgrel=1
+pkgrel=2
 pkgdesc="development framework configuration tools"
-url="https://github.com/pkgconf/pkgconf"
+url="https://git.sr.ht/~kaniini/pkgconf"
 arch="all"
 license="ISC"
 replaces="pkgconfig"
