main/pgpool: upgrade to 4.1.1

--- a/main/pgpool/APKBUILD
+++ b/main/pgpool/APKBUILD
@@ -2,12 +2,12 @@
 # Maintainer: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=pgpool
 _pkgname="$pkgname-II"
-pkgver=4.1.0
+pkgver=4.1.1
 pkgrel=0
 pkgdesc="A connection pooling/replication server for PostgreSQL"
 url="https://www.pgpool.net/"
 arch="all"
-license="BSD"
+license="pgpool-II"
 makedepends="postgresql-dev linux-headers"
 pkgusers="postgres"
 pkggroups="postgres"
@@ -67,7 +67,7 @@ doc() {
 	done
 }
 
-sha512sums="6e6d5cb40efd5357b5c428dedf71d7a772c23becc397d0ece86134b9d32d4911933d7d92f7e6e5fde8cf37efed74f44c4c9d1ab782994750e8d9e99e24603863  pgpool-4.1.0.tar.gz
+sha512sums="cd20fdd4893d780a7775626ff6b41b82db6043be198efe05985581dfa8446c29bc977e2b0bfab60caf8306ea228a31f91f893b4b51413b162bfe93a3354d34d0  pgpool-4.1.1.tar.gz
 71b8239b1b29e2c4a8312b300122ced1452bbe60fc7937e80172c7c5e3d6be71e5aee58f6d3d687b0e35df6ccdc27125a12ae9098f7c2d07e76b8103abca3556  pgpool.initd
 0e40a681b068ce5c7f03c342c1217b170601a507cacdf120b9a308df65f2065e6085b292a393802d1955079f7ec434a412e6d871f688ad83bc33fa34aca37cfe  pgpool.confd
 c9aa2ea9484ed29cb57cdff4004fa9dd4780d73c69db3378effb2e0ecd3ae178771c6a847a28e1a9cc6492ada4321584afb92c9b592119fb11898b42191f22b1  pgpool.logrotated
