community/stlink: upgrade to 1.6.0

--- a/community/stlink/APKBUILD
+++ b/community/stlink/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Sören Tempel <soeren+alpine@soeren-tempel.net>
 # Maintainer: Sören Tempel <soeren+alpine@soeren-tempel.net>
 pkgname=stlink
-pkgver=1.5.1
+pkgver=1.6.0
 pkgrel=0
 pkgdesc="STM32 discovery line linux programmer"
 url="https://github.com/texane/stlink"
@@ -33,8 +33,8 @@ package() {
 	make DESTDIR="$pkgdir" install
 
 	mkdir -p "$pkgdir"/usr/share/doc/$pkgname
-	install -m644 README.md ChangeLog.md doc/tutorial.md \
+	install -m644 README.md CHANGELOG.md doc/tutorial.md \
 		"$pkgdir"/usr/share/doc/$pkgname/
 }
 
-sha512sums="cabf7f6f5a6f3655206694f21162e0d9ac663bea07354186836695da888f2ddebe3871ea56580d1d4781d4c3dbf8a8459ab87ccbcd6f181f8e651ef58e22a372  stlink-1.5.1.tar.gz"
+sha512sums="0bf2416dac69e490560063714d630c4f549568bd9047113fb334f0841f5db23b97876307be8f0b1731863a2438c9502b9916d0d652c516d50969cb8b2cfa1a15  stlink-1.6.0.tar.gz"
